# desktop-python

./: .env  .gitignore  Dockerfile.server  README.md  pyproject.toml  requirements.txt  setup.py
app/: main.py
app/src/: argparse.py  gui.py  nmea.py
tassu_tutka/: api.py  argparse.py  client.py  error.py  gui.py  logging.py  nmea.py  pidfile.py  server.py  settings.py  signals.py  socket_server.py  ttutka.py
tests/: apitest.rest  test_nmea.py  test_proto.py
