[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tassu_tutka"
authors = [
    {name = "Mikko Kujala", email = "m.kujala@live.com"},
]
description = "Tassu Tutka desktop app. Some school project -.-'"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Unlicense"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "certifi",
    "charset-normalizer",
    "click",
    "customtkinter",
    "darkdetect",
    "decorator",
    "future",
    "geocoder",
    "geojson",
    "idna",
    "mypy-extensions",
    "packaging",
    "pathspec",
    "Pillow",
    "platformdirs",
    "pyperclip",
    "ratelim",
    "requests",
    "six",
    "tkintermapview",
    "urllib3",
    "black"
]
dynamic = ["version"]

[project.scripts]
ttutka = "tassu_tutka:ttutka:main"
